Create personal website

--- a/styles.css
+++ b/styles.css
@@ -2,22 +2,37 @@ img {
     Width: 400px;
 }
 
+
 body {
     text-align: center;
     font-family: "arial";
 }
+
 
 .two {
     width: 300px;
     text-align: center;
 }
 
+
 .three {
     width: 300px;
     text-align: center;
 }
 
+
 .four {
     width: 300px;
     text-align: center
+}
+
+
+.five {
+    width: 300px;
+    text-align: center;
+}
+
+
+html {
+    background-image: url("https://png.pngtree.com/thumb_back/fh260/back_pic/03/66/28/2857b014876d04f.jpg"
 }
