--- a/styles.css
+++ b/styles.css
@@ -34,5 +34,5 @@ body {
 
 
 html {
-    background-image: url("https://png.pngtree.com/thumb_back/fh260/back_pic/03/66/28/2857b014876d04f.jpg"
+    background-image: url("https://png.pngtree.com/thumb_back/fh260/back_pic/03/66/28/2857b014876d04f.jpg")
 }
