--- a/styles.css
+++ b/styles.css
@@ -34,7 +34,7 @@ body {
 
 
 html {
-    background-image: url("https://png.pngtree.com/thumb_back/fh260/back_pic/03/66/28/2857b014876d04f.jpg")
+    background-image: url("https://cdn.wallpapersafari.com/98/97/2yrfHP.jpg")
 }
 
 
