--- a/styles.css
+++ b/styles.css
@@ -33,8 +33,20 @@ body {
 }
 
 
+.six {
+    width: 300px;
+    text-align: center;
+}
+ 
+    
+.seven {
+    width: 300px;
+    text-align: center;
+}
+
+
 html {
-    background-image: url("https://cdn.wallpapersafari.com/98/97/2yrfHP.jpg")
+    background-image: url("https://hdwallsource.com/img/2015/3/solid-grey-wallpaper-47196-48713-hd-wallpapers.jpg")
 }
 
 
